--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -11,3 +11,7 @@ monitoring.ui.container.elasticsearch.enabled: true
 #
 elasticsearch.username: elastic
 elasticsearch.password: changeme
+
+
+xpack.security.enabled: true
+xpack.encryptedSavedObjects.encryptionKey: "!something_at_least_32_characters!"
