--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -15,3 +15,4 @@ elasticsearch.password: changeme
 
 xpack.security.enabled: true
 xpack.encryptedSavedObjects.encryptionKey: "!something_at_least_32_characters!"
+xpack.fleet.agents.tlsCheckDisabled: true
