--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -14,7 +14,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "elastic"
-		password => "changeme"
+		password => "é7snézbF5JcjGi"
 		ecs_compatibility => disabled
 	}
 }
