--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,7 +12,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.port=9000"
-      - "traefik.frontend.rule=Host:minio.mous.ovh,minio1.mous.ovh"
+      - "traefik.frontend.rule=Host:log.mous.ovh,logstash.mous.ovh"
       - "traefik.docker.network=traefik-public"
 
   kibana:
